[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/battle_hud/action_menu.gd" id="1"]

[node name="ActionMenu" type="PanelContainer"]
custom_minimum_size = Vector2(400, 80)
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="TechniqueButton" type="Button" parent="HBox" unique_name_in_owner=true]
layout_mode = 2
text = "Technique"

[node name="SwitchButton" type="Button" parent="HBox" unique_name_in_owner=true]
layout_mode = 2
text = "Switch"

[node name="RestButton" type="Button" parent="HBox" unique_name_in_owner=true]
layout_mode = 2
text = "Rest"

[node name="RunButton" type="Button" parent="HBox" unique_name_in_owner=true]
layout_mode = 2
text = "Run"

[node name="ItemButton" type="Button" parent="HBox" unique_name_in_owner=true]
layout_mode = 2
text = "Item"
